# bookmarks-semantic-search

./: .env.template  .gitignore  CLAUDE.md  GEMINI.md  README-DOCKER.md  README.md  deploy.sh  docker-compose.nginx.yml  docker-compose.prod.without-nginx.yml  docker-compose.prod.yml  docker-compose.web.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  alembic.ini  init_db.sql  main.py  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 100ad4ecc52f_add_reference_field_to_bookmarks.py  2025_12_30_1220_initial_migration_users_bookmarks_jobs_.py  2025_12_31_1220_add_fts_support.py  2025_12_31_1400_add_explore_feed_tables.py  2026_02_01_add_follow_relationships.py  2026_02_08_bookmark_url_per_user.py  2026_05_20_1921_add_feedback_table.py  2026_05_30_1541_add_is_private_to_bookmarks.py  3342d38c1917_create_users_table_with_integer_primary_.py  3b8d61a3a54e_create_jobs_table.py  a20cd48d5d8e_add_category_field_to_bookmarks.py  a754bcd3b880_add_is_read_field_to_bookmarks.py  e2d7f9ead3c5_initial_migration_users_bookmarks_jobs_.py  e58a5cdb9066_add_indexes_for_metadata_filtering.py  e6cf35803d1e_add_users_table_and_user_id_to_bookmarks.py  f1fbc58131d2_initial_migration_with_bookmarks_table.py
backend/app/: main.py
backend/app/api/: auth.py  bookmarks.py  feed.py  follows.py  jobs.py  preferences.py
backend/app/core/: auth.py  config.py  jwt.py  logging.py  scheduler.py  topic_sources.py
backend/app/models/: __init__.py  bookmark.py  job.py  (+5 more)
backend/scripts/: delete_user.py  merge_users.py
(+111 files in other folders)
